--- a/src/modulo-03-html-css/Aula2/exercicio-aula2-css/inicio.html
+++ b/src/modulo-03-html-css/Aula2/exercicio-aula2-css/inicio.html
@@ -8,41 +8,31 @@
 </head>
 
 <body>
-
 <div class="menu">
-  <span class=" item">
+  <span class="item">
      <a href = "inicio.html"> Início </a>
   </span>
 
-  <span class=" item">
+  <span class="item">
     <a href = "https://www.google.com.br/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=street+fighter&safe=active&tbm=nws" target="_blank"> Notícias </a>
   </span>
 
-  <span class=" item">
+  <span class="item">
     <a href = "ficha-tecnica.html"> Ficha Técnica</a>
   </span>
 
-  <span class=" item">
+  <span class="item">
     <a href = "sobre.html"> Sobre</a>
   </span>
 
 </div>
-
+<div  class="conteudo">
 <!--Div Street Fighter-->
-<div style="background-color: #404040;
-            padding:9px 20px;
-            color: #DCDCDC;
-            margin-left: 30px;
-            margin-right: 30px;">
+<div class="titulo" >
   <h1 id="inicio">Street Fighter</h1>
-
 </div>
 
-
-<div style="background-color:#DCDCDC;
-            padding: 15px;
-            margin-left: 30px;
-            margin-right: 30px;">
+<div class="corpo">
 
   <h2>Sumário</h2>
 <ul>
@@ -89,7 +79,6 @@ Street Fighter Alpha é uma subsérie, com três games e uma compilação por ho
 
 </div>
 
-
-
+</div>
 </body>
 </html>
