--- a/src/modulo-04-js/hello-js.html
+++ b/src/modulo-04-js/hello-js.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h2>Dia 01 - Hello Java Script</h2>
+    <script type="text/javascript" src="outroarquivo.js"> </script>
     <script type="text/javascript" src="hello.js"> </script>
   </body>
 </html>
