feat(exercicio2, exercicio1) : implementar números divisiveis por 3 e 5 ('Diglett dig, trio trio trio') e rename de pasta exercicio1.html para exercicios-lista1.

--- a/src/modulo-04-js/exercicios/lista1/exercicios-lista1.html
+++ b/src/modulo-04-js/exercicios/lista1/exercicios-lista1.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <script type="text/javascript" src="exercicio1.js"> </script>
+    <script type="text/javascript" src="exercicio2.js"> </script>
   </body>
 </html>
