--- a/src/modulo-04-js/exercicios/lista1/exercicios-lista1.html
+++ b/src/modulo-04-js/exercicios/lista1/exercicios-lista1.html
@@ -7,5 +7,8 @@
   <body>
     <script type="text/javascript" src="exercicio1.js"> </script>
     <script type="text/javascript" src="exercicio2.js"> </script>
+    <script type="text/javascript" src="exercicio3.js"> </script>
+
+
   </body>
 </html>
