feat(StreetFighter, FichaTecnica,Sobre) : implementar MVC para o site do StreetFighter

--- a/src/modulo-03-html-css/Aula2/exercicio-aula2-css/sobre.html
+++ b/src/modulo-03-html-css/Aula2/exercicio-aula2-css/sobre.html
@@ -67,8 +67,8 @@
             <strong>Mentor:</strong> Jesus Cristo. <br>
             <strong>Hobbies:</strong> Escutar música, ler. <br>
             <strong>Bandas Favoritas:</strong> Casting Crowns, Third Day, Jeremy Camp, Planetshakers, MercyMe, Newsboys... <br>
-            <strong>Objetivo desta Page:</strong> Pôr em prática o aprendizado que estou recebendo no Módulo 3, atrávez do treinamento
-            do Projeto Crescer realizado pelos proficionais da CWI Software. <br>
+            <strong>Objetivo desta Page:</strong> Pôr em prática o aprendizado que estou recebendo no Módulo 3, atráves do treinamento
+            do Projeto Crescer realizado pelos profissionais da CWI Software. <br>
         </p>
     </td>
   </tr>
